drools/drools-workbench/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: drools-workbench-dep
  namespace: drools-workbench
spec:
  selector:
    matchLabels:
      app: drools-workbench
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: drools-workbench
    spec:
      containers:
        - name: drools-workbench
          image: drools-workbench-image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
